# pyccante

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  test.cpp  test_2.png-autosave.kra  test_2.png~  to_ask.txt
examples/LT_LDR_test/: main.cpp
examples/algo_compute_poisson/: main.cpp  main.py
examples/algo_connected_components_test/: algo_connected_components_test.cpp  main.cpp  main.py  py_arg_connected_components_test.py
examples/algo_grow_cut/: main.cpp  main.py
examples/algo_grow_cut_test/: algo_grow_cut_test.cpp  algo_grow_cut_test.py
examples/algo_hdr_merger/: main.cpp  main.py
examples/algo_poisson_solver_test/: algo_poisson_solver_test.cpp
examples/filter_bilateral_2df_2ds/: main.cpp  main.py
examples/filter_bilateral_2df_test/: filter_bilateral_2df_test.cpp  filter_bilateral_2df_test.py
examples/filter_bilateral_2ds_test/: filter_bilateral_2ds_test.cpp  filter_bilateral_2ds_test.py
examples/filter_conv_2d/: main.cpp  main.py
examples/filter_gaussian_2d/: filter_gaussian_2d_test.cpp  main.cpp  main.py
examples/filter_luminance/: main.cpp  main.py
examples/filter_luminance_test/: filter_lum_test.cpp
examples/filter_max_min_mean_med/: main.cpp  main.py
examples/filter_max_test/: thief.ppm
examples/filter_mean_test/: filter_mean_test.cpp
examples/filter_med_test/: filter_med_test.cpp
examples/filter_mosaic/: main.cpp  main.py
examples/filter_mosaic_test/: filter_mosaic_test.cpp  image.png.kra
examples/filter_rotation/: main.cpp  main.py
examples/filter_rotation_test/: filter_rotation.py
examples/filter_warp_2d/: main.cpp  main.py
examples/filter_warp_2d_test/: filter_warp_2d_test.py
examples/filtering_linear_filters/: main.py
examples/image_blend/: main.cpp  main.py
examples/tmo_drago_test/: tmo_drago_test.cpp  tmo_drago_test.py
pyccanteGUI/: imgwindow.py  main.py
pyccante_gui/: main.py
src/: CMakeLists.txt  a.out  errors.txt  function2check.txt  main.cpp  test.cpp
src/bindings/: py_algo_connected_components.cpp  py_algo_connected_components.h  py_algo_grow_cut.cpp  py_algo_grow_cut.h  py_algo_hdr_merger.cpp  py_algo_hdr_merger.h  py_algo_poisson_solver.cpp  py_algo_poisson_solver.h  py_bbox.cpp  py_bbox.h  py_dynamics_range.cpp  py_dynamics_range.h  py_exif.cpp  py_exif.h  py_filter.cpp  py_filter.h  py_filter_bilateral_2df.cpp  py_filter_bilateral_2df.h  py_filter_bilateral_2ds.h  py_filter_conv_2d.cpp  py_filter_conv_2d.h  py_filter_gaussian_2d.cpp  py_filter_gaussian_2d.h  py_filter_luminance.cpp  py_filter_luminance.h  py_filter_max.cpp  py_filter_max.h  py_filter_mean.cpp  py_filter_mean.h  py_filter_med.cpp  py_filter_med.h  py_filter_med_vec.cpp  py_filter_med_vec.h  py_filter_mosaic.cpp  py_filter_mosaic.h  py_filter_rotation.cpp  py_filter_rotation.h  py_filter_warp_2d.cpp  py_filter_warp_2d.h  py_histogram.cpp  (+13 more)
src/bindings/py_algorithms/: py_algo_connected_components.cpp  py_algo_connected_components.h  py_algo_grow_cut.cpp  py_algo_grow_cut.h  py_algo_hdr_merger.cpp  py_algo_hdr_merger.h  py_algo_poisson_image_editing.cpp  py_algo_poisson_image_editing.h  py_algo_poisson_solver.cpp  py_algo_poisson_solver.h
src/bindings/py_filtering/: py_filter_bilateral_2df.cpp  py_filter_bilateral_2df.h  py_filter_bilateral_2ds.cpp  py_filter_bilateral_2ds.h  py_filter_conv_2d.cpp  py_filter_conv_2d.h  py_filter_gaussian_2d.cpp  py_filter_gaussian_2d.h  py_filter_luminance.cpp  py_filter_luminance.h  py_filter_max.cpp  py_filter_max.h  py_filter_mean.cpp  py_filter_mean.h  py_filter_med.cpp  py_filter_med.h  py_filter_med_vec.cpp  py_filter_med_vec.h  py_filter_min.cpp  py_filter_min.h  py_filter_mosaic.cpp  py_filter_mosaic.h  py_filter_rotation.cpp  py_filter_rotation.h  py_filter_simple_tmo.cpp  py_filter_simple_tmo.h  py_filter_warp_2d.cpp  py_filter_warp_2d.h
src/bindings/py_io/: py_exif.cpp
src/bindings/py_tone_mapping/: py_drago_tmo.cpp  py_drago_tmo.h  py_durand_tmo.cpp  py_durand_tmo.h  py_exposure_fusion_tmo.cpp  py_exposure_fusion_tmo.h  py_reinhard_tmo.cpp  py_reinhard_tmo.h  py_tone_mapping_operator.cpp  py_tone_mapping_operator.h  py_ward_histogram_tmo.cpp  py_ward_histogram_tmo.h
src/tests/: Histogram_test.cpp  a.out  blend_test.cpp  getMaxVal_test.cpp  isSimilar_test.cpp  rotates_test.cpp
src/tests/Histogram_test/: Histogram_test.cpp
src/tests/algo_connected_components_test/: algo_connected_components_test.cpp  connected_components.pfm  py_arg_connected_components_test.py
src/tests/algo_grow_cut_test/: algo_grow_cut_test.cpp
src/tests/algo_hdr_merger_test/: algo_hdr_merger_test.cpp  algo_hdr_merger_test.py  result.hdr
src/tests/algo_poisson_solver_test/: algo_poisson_solver_test.cpp
src/tests/filter_bilateral_2df_test/: filter_bilateral_2df_test.cpp  filter_bilateral_2df_test.py
src/tests/filter_bilateral_2df_test/blend_test/: blend_test.py
src/tests/filter_bilateral_2ds_test/: filter_bilateral_2ds_test.cpp  filter_bilateral_2ds_test.py
src/tests/filter_conv_2d_test/: filter_conv_2d_test.cpp  filter_conv_2d_test.py
src/tests/filter_gaussian_2d/: filter_gaussian_2d_test.py
src/tests/filter_luminance_test/: filter_lum_test.cpp  py_filter_lum_test.py
src/tests/filter_max_test/: filter_max_test.cpp  filter_max_test.py
src/tests/filter_mean_test/: filter_mean_test.py
src/tests/filter_med_test/: filter_med_test.py
src/tests/filter_med_vec_test/: filter_med_vec_test.cpp  filter_med_vec_test.py
src/tests/filter_mosaic_test/: filter_mosaic_test.cpp  filter_mosaic_test.py
src/tests/filter_rotation_test/: filter_rotation_test.cpp
src/tests/filter_warp_2d_test/: filter_warp_2d_test.cpp
src/tests/getDiagonalSize_test/: getDiagonalSize_test.cpp
src/tests/get_data/: get_data.cpp
src/tests/image_max_val/: max_val_test.cpp  max_val_test.py
src/tests/jpg_test/: jpg_test.cpp
src/tests/tm_ward_histogram_tmo_test/: tm_ward_histogram_tmo_test.cpp  tm_ward_histogram_tmo_test.py
src/tests/tmo_durand_test/: tmo_durand_test.py
src/tests/tmo_exposure_fusion_test/: exposure_fusion_test.cpp  exposure_fusion_test.py
src/tests/write_test/: main.cpp
(+59 files in other folders)
